--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             </nav>
         </header>
         <main class="main container mx-auto p-3">
-            <div id="post">
+            <div id="posts">
             </div>
             <div id="liked">
                 <h1>Liked posts</h1>
