--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <h1>Liked posts</h1>
             </div>
 
-            <div id="reported">
+            <div id="reporte">
                 <h1>Reported posts</h1>
             </div>
         </main>
