--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
         <main class="main container mx-auto p-3">
             <div id="posts">
             </div>
-            <div id="liked">
+            <div id="like">
                 <h1>Liked posts</h1>
             </div>
 
-            <div id="reporte">
+            <div id="reported">
                 <h1>Reported posts</h1>
             </div>
         </main>
