--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <main class="main container mx-auto p-3">
             <div id="posts">
             </div>
-            <div id="like">
+            <div id="liked">
                 <h1>Liked posts</h1>
             </div>
 
@@ -77,7 +77,7 @@
                 <h1>Reported posts</h1>
             </div>
         </main>
-        <footer></footer>
+        
 
         <!-- add javascript  file  -->
         <script src="./js/app.js"></script>
