--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <h1>Reported posts</h1>
             </div>
         </main>
-        
+        <footer></footer>
 
         <!-- add javascript  file  -->
         <script src="./js/app.js"></script>
